--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Primera pagina en gitHubPages</h1>
-    <img src="https://imgur.com/gallery/PfA0M2o"/>
+    <img src="https://i.imgur.com/PfA0M2o.gif"/>
 </body>
 </html>
