Se añadio la historia de como nacio el sitio

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Primera pagina en gitHubPages</h1>
+    <p>...Hoy no dormi, pero me puse a estudiar !</p>
     <img src="https://i.imgur.com/PfA0M2o.gif"/>
 </body>
 </html>
